tests/rosetta/out/C/box-the-compass.c
// Generated by Mochi compiler v0.10.28 on 2025-07-18T09:58:57Z
// Generated by Mochi compiler v0.10.28 on 2025-07-18T09:58:57Z
#include <stdio.h>
#include <stdlib.h>
#include <string.h>

typedef struct {
  int len;
  double *data;
} list_float;
static list_float list_float_create(int len) {
  list_float l;
  l.len = len;
  l.data = calloc(len, sizeof(double));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
typedef struct {
  int len;
  char **data;
} list_string;
static list_string list_string_create(int len) {
  list_string l;
  l.len = len;
  l.data = calloc(len, sizeof(char *));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
static char *concat_string(char *a, char *b) {
  size_t len1 = strlen(a);
  size_t len2 = strlen(b);
  char *buf = (char *)malloc(len1 + len2 + 1);
  memcpy(buf, a, len1);
  memcpy(buf + len1, b, len2);
  buf[len1 + len2] = '\0';
  return buf;
}
static char *_str(int v) {
  char *buf = (char *)malloc(32);
  sprintf(buf, "%d", v);
  return buf;
}
static int index_of_string(char *s, char *sub) {
  char *pos = strstr(s, sub);
  if (!pos)
    return -1;
  return pos - s;
}
static char *slice_string(char *s, int start, int end) {
  int len = strlen(s);
  if (start < 0)
    start += len;
  if (end < 0)
    end += len;
  if (start < 0)
    start = 0;
  if (end > len)
    end = len;
  if (start > end)
    start = end;
  char *buf = (char *)malloc(end - start + 1);
  memcpy(buf, s + start, end - start);
  buf[end - start] = '\0';
  return buf;
}
static int i = 0;

char *padLeft(char *s, int w) {
  char *res = "";
  int n = w - strlen(s);
  while (n > 0) {
    char *tmp1 = concat_string(res, " ");
    res = tmp1;
    n = n - 1;
  }
  char *tmp2 = concat_string(res, s);
  return tmp2;
}

char *padRight(char *s, int w) {
  char *out = s;
  int i = strlen(s);
  while (i < w) {
    char *tmp3 = concat_string(out, " ");
    out = tmp3;
    i = i + 1;
  }
  return out;
}

int indexOf(char *s, char *ch) {
  int i = 0;
  while (i < strlen(s)) {
    if (slice_string(s, i, i + 1) == ch) {
      return i;
    }
    i = i + 1;
  }
  return (-1);
}

char *format2(double f) {
  char *tmp4 = _str(f);
  char *s = tmp4;
  int idx = index_of_string(s, ".");
  if (idx < 0) {
    char *tmp5 = concat_string(s, ".00");
    s = tmp5;
  } else {
    int need = idx + 3;
    if (strlen(s) > need) {
      s = slice_string(s, 0, need);
    } else {
      while (strlen(s) < need) {
        char *tmp6 = concat_string(s, "0");
        s = tmp6;
      }
    }
  }
  return s;
}

int cpx(double h) {
  int x = (int)(((h / 11.25) + 0.5));
  x = x % 32;
  if (x < 0) {
    x = x + 32;
  }
  return x;
}

char *degrees2compasspoint(double h) { return compassPoint.data[cpx(h)]; }

int _mochi_main() {
  list_string compassPoint = list_string_create(32);
  compassPoint.data[0] = "North";
  compassPoint.data[1] = "North by east";
  compassPoint.data[2] = "North-northeast";
  compassPoint.data[3] = "Northeast by north";
  compassPoint.data[4] = "Northeast";
  compassPoint.data[5] = "Northeast by east";
  compassPoint.data[6] = "East-northeast";
  compassPoint.data[7] = "East by north";
  compassPoint.data[8] = "East";
  compassPoint.data[9] = "East by south";
  compassPoint.data[10] = "East-southeast";
  compassPoint.data[11] = "Southeast by east";
  compassPoint.data[12] = "Southeast";
  compassPoint.data[13] = "Southeast by south";
  compassPoint.data[14] = "South-southeast";
  compassPoint.data[15] = "South by east";
  compassPoint.data[16] = "South";
  compassPoint.data[17] = "South by west";
  compassPoint.data[18] = "South-southwest";
  compassPoint.data[19] = "Southwest by south";
  compassPoint.data[20] = "Southwest";
  compassPoint.data[21] = "Southwest by west";
  compassPoint.data[22] = "West-southwest";
  compassPoint.data[23] = "West by south";
  compassPoint.data[24] = "West";
  compassPoint.data[25] = "West by north";
  compassPoint.data[26] = "West-northwest";
  compassPoint.data[27] = "Northwest by west";
  compassPoint.data[28] = "Northwest";
  compassPoint.data[29] = "Northwest by north";
  compassPoint.data[30] = "North-northwest";
  compassPoint.data[31] = "North by west";
  list_float headings = list_float_create(33);
  headings.data[0] = 0.0;
  headings.data[1] = 16.87;
  headings.data[2] = 16.88;
  headings.data[3] = 33.75;
  headings.data[4] = 50.62;
  headings.data[5] = 50.63;
  headings.data[6] = 67.5;
  headings.data[7] = 84.37;
  headings.data[8] = 84.38;
  headings.data[9] = 101.25;
  headings.data[10] = 118.12;
  headings.data[11] = 118.13;
  headings.data[12] = 135.0;
  headings.data[13] = 151.87;
  headings.data[14] = 151.88;
  headings.data[15] = 168.75;
  headings.data[16] = 185.62;
  headings.data[17] = 185.63;
  headings.data[18] = 202.5;
  headings.data[19] = 219.37;
  headings.data[20] = 219.38;
  headings.data[21] = 236.25;
  headings.data[22] = 253.12;
  headings.data[23] = 253.13;
  headings.data[24] = 270.0;
  headings.data[25] = 286.87;
  headings.data[26] = 286.88;
  headings.data[27] = 303.75;
  headings.data[28] = 320.62;
  headings.data[29] = 320.63;
  headings.data[30] = 337.5;
  headings.data[31] = 354.37;
  headings.data[32] = 354.38;
  printf("Index  Compass point         Degree\n");
  while (i < 33) {
    double h = headings.data[i];
    int idx = i % 32 + 1;
    char *cp = degrees2compasspoint(h);
    char *tmp7 = _str(idx);
    printf("%s\n", padLeft(tmp7, 4) + "   " + padRight(cp, 19) + " " +
                       format2(h) + "°");
    i = i + 1;
  }
  return 0;
}
int main() { return _mochi_main(); }
